# Python_Core

./: HW4_module-1dz.py  HW4_module-2dz.py  HW4_module-4dz.py  HW5_module-2dz.py  Prosto.py  goit-algo-hw-03-1.py  goit-algo-hw-03-2.py  goit-algo-hw-03-4.py  goit-algo-hw-04-1.py  goit-algo-hw-05-1.py  goit-algo-hw-05-2.py  goit-algo-hw-05-4.py  goit-algo-hw-06.py  goit-pycore-hw-08.py  goit_web_1_hw.py  index.html  main.py  primer.py  pyyyy.py  requirements.txt  test.txt  Домашка-2.py
Example_joke/: log.py  main.py
Functional programming and built-in Python modules/: goit-algo-hw-05-1.py  goit-algo-hw-05-4.py
Work with date, time and advanced work with strings/: goit-algo-hw-03-4.py
Working with files and the modular system/: goit-algo-hw-04-1.py  goit-algo-hw-04-2.py  goit-algo-hw-04-4.py
__pycache__/: eee.py  goit-algo-hw-06.py  goit-algo-hw-07.py
assistant-bot/: main.py  pyproject.toml
example_prj/: data.py
