[tool.poetry]
name = "assistant-bot"
version = "0.1.0"
description = ""
authors = ["Serhii <159451661+SergeySudaraenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

